chore:  Added flowbite support to design sys (X) Integration of the design-system package with the next-tailwind-template app (X) Configuration updates for Stryker mutation testing (fixing .stryker-tmp directory naming) (X) Adding Flowbite React components to the design system (X) Improving development workflow with better hot reloading and dependency management

--- a/packages/design-system/src/styles.css
+++ b/packages/design-system/src/styles.css
@@ -1,5 +1,7 @@
 /* Component-level styles for the design-system package */
 @import "tailwindcss";
+@plugin "flowbite-react/plugin/tailwindcss";
+@source "../.flowbite-react/class-list.json";
 
 /* Import component-specific CSS files */
 @import "./button/button.css";
