--- a/apps/next-tailwind-template/app/globals.css
+++ b/apps/next-tailwind-template/app/globals.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @import "@repo/tailwind-config";
 @import "@repo/ui/styles.css";
+@import "@repo/design-system/styles.css";
 
 :root {
   --foreground-rgb: 0, 0, 0;
