--- a/packages/base-ui/src/sideBarLayout/sideBarLayout.css
+++ b/packages/base-ui/src/sideBarLayout/sideBarLayout.css
@@ -4,7 +4,7 @@
 }
 
 .sidebar-layout__left-content {
-  @apply flex justify-center items-center font-bold text-2xl p-0;
+  @apply flex justify-center items-center font-bold text-2xl p-0 w-16;
 }
 
 .sidebar-layout__right-content {
