--- a/apps/next-tailwind-template/app/globals.css
+++ b/apps/next-tailwind-template/app/globals.css
@@ -27,3 +27,13 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+/* Drawer width override - global application level */
+[data-testid="flowbite-drawer"] > div:last-child,
+[data-testid="flowbite-drawer-body"],
+[role="dialog"][aria-modal="true"] > div > div,
+.face-swap-sidebar,
+.face-swap-drawer {
+  max-width: 200px !important;
+  width: 200px !important;
+}
