feat: add SelectedMaceModelContainer component with drawer functionality; update styles and integrate with existing UI components

--- a/packages/face-swap-ui/src/styles.css
+++ b/packages/face-swap-ui/src/styles.css
@@ -8,3 +8,8 @@
  
 
 @import "./faceSwapAppLayout/faceSwapAppLayout.css";
+@import "./faceSwapAppPage/faceSwapAppPage.css";
+@import "./faceSwapSideBar/faceSwapSideBar.css";
+@import "./imageGalleryPage/imageGalleryPage.css";
+@import "./outputPage/outputPage.css";
+@import "./selectedMaceModelContainer/selectedMaceModelContainer.css";
