--- a/packages/face-swap-ui/src/styles.css
+++ b/packages/face-swap-ui/src/styles.css
@@ -13,3 +13,4 @@
 @import "./imageGalleryPage/imageGalleryPage.css";
 @import "./outputPage/outputPage.css";
 @import "./selectedMageModelContainer/selectedMageModelContainer.css";
+@import "./combinationHighlighter/combinationHighlighter.css"
