--- a/packages/face-swap-ui/src/styles.css
+++ b/packages/face-swap-ui/src/styles.css
@@ -11,6 +11,7 @@
 @import "./faceSwapAppPage/faceSwapAppPage.css";
 @import "./faceSwapSideBar/faceSwapSideBar.css";
 @import "./imageGalleryPage/imageGalleryPage.css";
+@import "./importFaceModelPage/importFaceModelPage.css";
 @import "./outputPage/outputPage.css";
 @import "./selectedMageModelContainer/selectedMageModelContainer.css";
 @import "./combinationHighlighter/combinationHighlighter.css"
